import time
import json
import uuid
# from neo4j import GraphDatabase # 그래프 데이터베이스 (Neo4j)
# from faiss import IndexFlatL2    # 벡터 데이터베이스 (FAISS)
# import numpy as np
# import grpc
# import semantos_pb2
# import semantos_pb2_grpc

# KB 서비스는 gRPC 서버를 통해 LogOutcome 및 Retrieval 요청을 처리합니다.

class SemanticKnowledgeBase:
    def __init__(self):
        # 1. 그래프 데이터베이스 (Neo4j 시뮬레이션)
        # 커널 노브, 의존성, 워크로드 유형 간의 관계 저장
        # self.neo4j_driver = GraphDatabase.driver("bolt://localhost:7687", auth=("neo4j", "password"))
        self.knob_metadata = {
            "vm.swappiness": {"category": "Memory", "dependencies": ["vm.dirty_ratio"]},
            "sched_min_granularity_ns": {"category": "Scheduler", "dependencies": ["kernel.perf_event_max_sample_rate"]}
        }

        # 2. 벡터 데이터베이스 (FAISS 시뮬레이션)
        # 과거 최적화 트레이스의 상태(TelemetrySnapshot) 벡터 임베딩 저장
        # self.embedding_size = 768 
        # self.faiss_index = IndexFlatL2(self.embedding_size)
        self.trace_log = [] # 기록된 트레이스 데이터를 저장하는 리스트

        print("Knowledge Base Initialized.")
        self._initialize_sample_data()

    def _initialize_sample_data(self):
        """KB에 초기 샘플 데이터 로드 (Neo4j 그래프 구조 시뮬레이션)"""
        # 실제 환경에서는 Cypher 쿼리를 통해 노드와 엣지를 생성합니다.
        print("KB: Loaded initial graph structure and sample embeddings.")
        
        # 샘플 트레이스 (성공적인 과거 튜닝 경험)
        sample_trace = {
            "id": str(uuid.uuid4()),
            "knob": "sched_min_granularity_ns",
            "prev_value": "4000000",
            "new_value": "1500000",
            "slo_violation": False,
            "workload": "OLTP",
            # Telemetry Snapshot 임베딩 시뮬레이션 (768차원)
            # "embedding": np.random.rand(1, self.embedding_size).astype('float32')
        }
        self.trace_log.append(sample_trace)
        # self.faiss_index.add(sample_trace["embedding"])
        
    # def LogOutcome(self, request, context):
    def log_outcome(self, optimization_trace):
        """Safety Runtime으로부터 최종 결과를 받아 Knowledge Base에 기록합니다 (Continual Learning)."""
        trace_id = str(uuid.uuid4())
        
        # 1. 트레이스 상세 정보 기록 (RDBMS 또는 NoSQL/S3)
        log_entry = {
            "trace_id": trace_id,
            "timestamp": time.time(),
            "action": optimization_trace["action"],
            "initial_metrics": optimization_trace["initial_state"]["metrics"],
            "outcome_metrics": optimization_trace["outcome_state"]["metrics"],
            "slo_violation": optimization_trace["slo_violation"]
        }
        self.trace_log.append(log_entry)
        
        # 2. 상태 벡터 임베딩 생성 및 FAISS에 추가 (Vector DB)
        # embedding = self._generate_embedding(optimization_trace["initial_state"])
        # self.faiss_index.add(embedding)
        
        print(f"KB: Successfully logged new optimization trace: {trace_id}")
        # return semantos_pb2.LogResponse(success=True)

    def retrieve_context(self, current_telemetry):
        """Reasoner이 RAG 컨텍스트를 검색합니다."""
        
        # 1. Graph Retrieval (Neo4j 시뮬레이션)
        # Cypher: MATCH (k:Knob)-[:DEPENDS_ON]->(d:Knob) WHERE k.name = '...' RETURN d
        graph_context = "Graph Context: vm.swappiness depends on vm.dirty_ratio. The 'Scheduler' category has high variance."
        
        # 2. Vector Retrieval (FAISS 시뮬레이션)
        # query_embedding = self._generate_embedding(current_telemetry)
        # D, I = self.faiss_index.search(query_embedding, k=3) # 상위 3개 유사 트레이스 검색
        
        # 유사 트레이스 검색 결과 시뮬레이션
        vector_context = (
            f"Similar Trace 1 (OLTP): Setting sched_min_granularity_ns to 1.5ms resulted in 25% P95 latency reduction (No SLO violation). "
            f"Similar Trace 2 (Streaming): Setting vm.swappiness to 0 caused 50% throughput drop (SLO violation: True)."
        )

        return graph_context + "\n" + vector_context
    
    # def _generate_embedding(self, telemetry_state):
    #     """Telemetry Snapshot을 임베딩 벡터로 변환하는 함수 (예: Sentence Transformer)"""
    #     # ... (NLP 임베딩 모델 로직)
    #     return np.random.rand(1, self.embedding_size).astype('float32')
    
# gRPC 서버 구현 (생략)
# class KnowledgeBaseServicer(semantos_pb2_grpc.SemantosControlServicer):
#     def LogOutcome(self, request, context):
#         return KB.log_outcome(request)
        
if __name__ == "__main__":
    KB = SemanticKnowledgeBase()
    
    # Reasoner이 컨텍스트를 검색하는 시뮬레이션
    sample_telemetry = {"metrics": {"p95_latency_ms": 110.0, "cpu_run_queue_len": 4.1}}
    context = KB.retrieve_context(sample_telemetry)
    
    print("\n--- RAG Context Provided to Reasoner ---")
    print(context)
    print("----------------------------------------------\n")

    # Safety Runtime이 결과를 로깅하는 시뮬레이션
    sample_trace = {
        "action": {"knob_name": "vm.swappiness", "proposed_value": "1"},
        "initial_state": {"metrics": {"p95_latency_ms": 110.0}},
        "outcome_state": {"metrics": {"p95_latency_ms": 95.0}},
        "slo_violation": False
    }
    KB.log_outcome(sample_trace)