import grpc
from concurrent import futures
from fastapi import FastAPI
from pydantic import BaseModel
# from llama_cpp import Llama  # 실제 LLM 라이브러리 대신 시뮬레이션
# from faiss_db import FaissRetriever
# from neo4j_kb import Neo4jRetriever

# gRPC 서비스 임포트 (semantos_pb2.py는 .proto 컴파일 시 생성됨)
# import semantos_pb2
# import semantos_pb2_grpc

app = FastAPI()

class ReasonerOutput(BaseModel):
    knob_name: str
    proposed_value: str
    rationale: str
    uncertainty_score: float

# Fine-tuned LLaMA-3.1-13B 모델 시뮬레이션
# LlmModel = Llama(model_path="./llama-3.1-13b-ft.gguf")

def get_rag_context(telemetry_data):
    """KB에서 관련 의존성 및 과거 트레이스를 검색합니다 (Cypher/FAISS) [cite: 959, 1009]"""
    # ... (Neo4j 및 FAISS 검색 로직 시뮬레이션)
    context = (
        "Current state: High P95 latency (120ms), High CPU run queue length (3.5). "
        "KB Snippet 1 (Dependency): sched_latency_ns inversely affects fairness. "
        "KB Snippet 2 (Past Trace): Reducing sched_min_granularity_ns to 1.5ms improved latency by 25% for OLTP workload."
    )
    return context

@app.post("/recommend")
def generate_recommendation(data: dict):
    telemetry = data.get("telemetry", {})
    
    rag_context = get_rag_context(telemetry)
    
    # LLM 추론 프롬프트 구성 (Few-shot, Chain-of-Thought) [cite: 987]
    prompt = (
        f"CONTEXT: {rag_context}\n"
        f"TASK: Generate a tuning recommendation for the current system state, "
        f"proposing a new value and a natural-language rationale citing the context."
    )
    
    # LLM 호출 시뮬레이션
    # llm_output = LlmModel.create_completion(prompt)
    
    # 시뮬레이션된 LLM 출력
    recommendation = ReasonerOutput(
        knob_name="sched_min_granularity_ns",
        proposed_value="1500000",  # 1.5ms (nanoseconds)
        rationale="Based on KB trace, reducing the minimum scheduling granularity to 1.5ms "
                  "is expected to improve tail latency by better coordinating with memory reclamation "
                  "knobs, addressing the high CPU run queue length[cite: 916].",
        uncertainty_score=0.15
    )

    return recommendation.dict()

# gRPC 서버 구현 (생략)
# class ReasonerServicer(semantos_pb2_grpc.ReasonerServicer):
#     def GetRecommendations(self, request, context):
#         # ... gRPC 요청을 FastAPI 함수로 라우팅
#         pass

if __name__ == "__main__":
    # gRPC 서버와 FastAPI 웹 서버를 함께 실행하여 LLaMA 모델을 서빙합니다.
    # uvicorn.run(app, host="0.0.0.0", port=8000)
    print("Reasoner Engine is running (Simulated)")